jupyter_dashboards/nbextension/notebook/dashboard-view/dashboard-view.css
/**
 * Copyright (c) Jupyter Development Team.
 * Distributed under the terms of the Modified BSD License.
 */

/* hide extraneous cell parts when in dashboard view  */
.urth-dashboard .celltoolbar,
.urth-dashboard.view-only .grid-stack .cell.grid-stack-item > .input,
.urth-dashboard .container .cell .prompt,
.urth-dashboard .container .cell.grid-stack-item .output_stderr,
.urth-dashboard .container .cell.grid-stack-item .output_error {
    display: none !important; /* Necessary to override inline style set by notebook */
}

/* Gridstack container */
.grid-stack#notebook-container {
    padding-left: 0;
    padding-right: 0;
    transition: background-color 0.75s,
                box-shadow 0.75s,
                height 0.3s;
}
body:not(.view-only) .grid-stack#notebook-container:hover {
    background-color: transparent;
    box-shadow: none;
}
.grid-stack#notebook-container .grid-stack-placeholder {
    transition-duration: 0.25s;
}
.grid-stack#notebook-container .grid-stack-placeholder > .placeholder-content {
    border: 2px dashed #5bc0de;
    background-color: transparent;

    /*
        computed by gridstack-custom:

        left:  (margin/2)px;
        right: (margin/2)px;
     */
}

/* Gridstack cells */
.grid-stack .cell,
.grid-stack .cell.selected {
    background: transparent;
    border: none;
    padding: 0;

    /*
        computed by gridstack-custom:

        padding: 0 (margin/2)px;
     */
}
.urth-dashboard:not(.view-only) .grid-stack .cell.grid-stack-item > .input {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 0.5em 1em;
    overflow: hidden;
    opacity: 0;
    transition: opacity 0.3s;
}
.urth-dashboard:not(.view-only) .grid-stack:not(.hide-code):not(:hover) .cell.grid-stack-item > .input {
    /*display: none;*/
}
.urth-dashboard:not(.view-only) .grid-stack:not(.hide-code):hover .cell.grid-stack-item > .input {
    opacity: 0.3;
}
.urth-dashboard:not(.view-only) .grid-stack:not(.hide-code) .cell.grid-stack-item > .input div.input_area {
    border: none;
    background: none;
}
.grid-stack .dashboard-item-background,
.grid-stack .dashboard-item-border {
    position: absolute;
    background-color: white;
    top: 0;
    bottom: 0;
    z-index: -1;
    transition: box-shadow 0.75s;

    /*
        computed by gridstack-custom:

        left: (margin/2)px;
        right: (margin/2)px;
     */
}
.grid-stack .dashboard-item-border {
    background-color: transparent;
    color: transparent;
    z-index: 10;
    pointer-events: none; /* "pass through" mouse events */
    transition: background-color 0.2s,
                color 0.2s,
                box-shadow 0.75s;
}
.grid-stack .cell:not(.grid-stack-item) .dashboard-item-background,
.grid-stack .cell:not(.grid-stack-item) .dashboard-item-border {
    left: 0;
    right: 0;
}
.grid-stack:hover .grid-stack-item .dashboard-item-border,
.grid-stack .cell:not(.grid-stack-item) {
    box-shadow: 0 1px 5px 1px rgba(87,87,87,0.2);
}
.urth-dashboard .ui-draggable-dragging.cell,
.urth-dashboard .ui-resizable-resizing.cell {
    opacity: 0.75;
}
.grid-stack .cell > :not(.dashboard-item-background):not(.dashboard-item-border):not(.ui-resizable-handle) {
    /*
        computed by gridstack-custom:

        margin-left: (margin/2)px;
        margin-right: (margin/2)px;
     */
}

/* Grid cell controls */
.urth-dashboard .cell .grid-control-container {
    visibility: hidden;
    position: absolute;
    color: #b2b2b2;
    top: 0;

    background-color: #fff;
    border: 1px solid #eee;
    border-top: none;

    /* widgets overlap, so pull forward */
    z-index: 100;
}
.urth-dashboard .cell:hover .grid-control-container {
    visibility: visible;
}
.urth-dashboard .cell .grid-control-container.grid-control-nw {
    border-left: none;

    /*
        computed by gridstack-custom:

        left: (margin/2)px;
     */
}
.urth-dashboard .cell:not(.grid-stack-item) .grid-control-container.grid-control-nw {
    left: 0;
}
.urth-dashboard .cell .grid-control-container.grid-control-ne {
    border-right: none;

    /*
        computed by gridstack-custom:

        right: (margin/2)px;
     */
}
.urth-dashboard .cell:not(.grid-stack-item) .grid-control-container.grid-control-ne {
    right: 0;
}
.urth-dashboard .cell .grid-control {
    padding: 5px;
    width: 25px;
    height: 25px;
    text-align: center;
}

/* Grid cell controls: drag */
.urth-dashboard .cell .drag-handle:hover {
    color: #306c9e;
    cursor: move; /* for old IE */
    cursor: -webkit-grab;
    cursor: grab;
}
body.dragging,
body.dragging.urth-dashboard .ui-draggable-dragging.cell:hover .drag-handle:hover {
    cursor: -webkit-grabbing !important;
    cursor: grabbing !important;
}

/* Grid cell controls: hover behavior */
.urth-dashboard .cell .grid-control.close-btn:hover {
    color: red;
    cursor: pointer;
}
.urth-dashboard .cell .grid-control.edit-btn:hover,
.urth-dashboard .cell .grid-control.add-btn:hover {
    color: #306c9e;
    cursor: pointer;
}

/* Hide specific grid controls based on hidden state */
.urth-dashboard .cell.grid-stack-item .grid-control.add-btn,
.urth-dashboard .cell:not(.grid-stack-item) .grid-control.drag-handle,
.urth-dashboard .cell:not(.grid-stack-item) .grid-control.close-btn,
.urth-dashboard .cell:not(.grid-stack-item) .gs-resize-handle {
    display: none;
}

/* drag/drop cell overlay*/
.urth-dashboard.all_cell_drag:not(.view-only) .grid-stack-item .dashboard-item-border {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    background-color: rgba(255, 255, 255, 0.9);
    color: #b2b2b2;
    font-size: 50px;
    pointer-events: auto;
}
.urth-dashboard.all_cell_drag:not(.view-only) .grid-stack-item .dashboard-item-border:hover {
    cursor: -webkit-grab;
    cursor: grab;
}
.urth-dashboard.all_cell_drag:not(.view-only) .grid-stack-item .grid-control-container,
.urth-dashboard.all_cell_drag:not(.view-only) .grid-stack-item .ui-resizable-handle {
    display: none !important; /* important needed to override inline style set by gridstack */
}
.urth-dashboard:not(.all_cell_drag):not(.view-only) .dashboard-item-border i,
.urth-dashboard .grid-stack > .cell:not(.grid-stack-item) .dashboard-item-border i {
    display: none;
}

/* Hidden Cells */
.urth-dashboard #dashboard-hidden-header {
    height: 150px;
    padding: 15px;
}

.urth-dashboard #dashboard-hidden-header .header {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    margin: 2em 0;
    padding-top: 50px;
}
.urth-dashboard #dashboard-hidden-header .header .title {
    margin: 0 1em 0 0;
}
.urth-dashboard #dashboard-hidden-header .header .btn:not(.btn-info) {
    background-color: transparent;
    border: 1px solid black;
}

.grid-stack .cell:not(.grid-stack-item) {
    position: absolute;
    min-height: 100px;

    transition: left 0.3s, top 0.3s, height 0.3s, width 0.3s;
}

.grid-stack .cell.code_cell:not(.grid-stack-item) .input_area {
    max-height: 200px;
    overflow: scroll;
}

/* static view */
.view-only .grid-stack-static .cell.ui-state-disabled {
    /* override disabled state set by jquery-ui */
    opacity: 1;
    -webkit-filter: none;
            filter: none;
}
.view-only .grid-stack-static .cell.ui-state-disabled .grid-control-container {
    display: none;
}
.view-only #dashboard-hidden-header,
.view-only .cell:not(.grid-stack-item) {
    display: none;
}
.view-only .grid-stack .dashboard-item-background,
.view-only .grid-stack .dashboard-item-border {
    display: none;
}

/* Edit cell animation */
.cell.edit-select {
    -webkit-animation: shadow-fade 2s linear 250ms;
            animation: shadow-fade 2s linear 250ms;
}
@-webkit-keyframes shadow-fade {
    0%   { box-shadow: 0 0 10px 2px #5bc0de; }
    100% { box-shadow: 0 0 10px 2px transparent; }
}
@keyframes shadow-fade {
    0%   { box-shadow: 0 0 10px 2px #5bc0de; }
    100% { box-shadow: 0 0 10px 2px transparent; }
}

/* Gridstack Overrides */
#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-se,
#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-sw {
    width:  8px;
    height: 8px;
    bottom: 5px;
    border: 2px solid rgb(178, 178, 178);
    border-top: none;
    -webkit-transform: none;
            transform: none;
}
#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-se {
    /*
        computed in gridstack-custom:

        right: 5px + (margin/2)px;
    */
    border-left: none;
}
#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-sw {
    /*
        computed in gridstack-custom:

        left: 5px + (margin/2)px;
    */
    border-right: none;
}
#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-se::before,
#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-sw::before {
    content: ""; /* remove the existing drag icons */
}

#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-e,
#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-w {
    top: 25px;
    bottom: 25px;
    height: auto;
}
#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-e {
    right: 0;
}
#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-w {
    left: 0;
}
#notebook-container.grid-stack > .grid-stack-item > .ui-resizable-s {
    width: auto;
}

